
Addition to last fix.  Also, we're going to specify error messages
that *should* be shown and ignore others, not show all but a select
few.  This helps with the status line issue.
----------------------------------------------------------------------
Sun Jul 14 00:49:34 2002                        Michael Jennings (mej)

Fixed bug pointed out by JC Wong <catalyst@gmx.net> where resizing a
window which had had transparency toggled on would reveal a black spot
at the bottom of the scrollbar.
----------------------------------------------------------------------
Tue Aug 13 22:55:58 2002                        Michael Jennings (mej)

Documentation fix from Jim Lewis <jel@louie.cc>.
----------------------------------------------------------------------
Thu Sep  5 21:47:57 2002                        Michael Jennings (mej)

Updates to the termcap/terminfo stuff to make everything work on *BSD.
Thanks to Thomas Dickey <dickey@herndon4.his.com> and Will Yardley
<william@hq.newdream.net> for their assistance with this.
----------------------------------------------------------------------
Sun Sep 22 00:34:42 2002                        Michael Jennings (mej)

Added an option to disable the secondary screen as requested by Marc
Merlin <marc@merlins.org>.
----------------------------------------------------------------------
Sun Sep 29 21:48:10 2002                        Michael Jennings (mej)

Fixed Debian Bug #155960.  WM_COMMAND was being set improperly because
equals signs in the arg list were being NUL'd out for no reason.
----------------------------------------------------------------------
Fri Oct  4 21:17:42 2002                        Michael Jennings (mej)

LibAST 0.5 is now required to build Eterm.  Hope everyone updated.  By
the way, this fixes that old font-starts-with-a-hyphen bug along with
some compiler warnings the resulted from a change in the way the
ASSERT() macro worked.
----------------------------------------------------------------------